css/obBase.css
/* ... */
#userPage .photosModule.dragOver .dropPanel {
  opacity: 1;
  z-index: 2;
}

#userPage .photosModule .dropPanel .icon {
  font-size: 50px;
  margin-top: 50px;
}

#userPage .photosModule .editItemImageLoadPhotoMessage {
  transition: opacity 0.3s;
}

#userPage .photosModule.dragOver .editItemImageLoadPhotoMessage {
  opacity: 0;
}

.editItemImageHolder {
  height: 168px;
  overflow: auto;
  /*scroll bar is added with JS */
}

.editItemImageLoadPhotoMessage {
  height: 168px;
  width: 100%;
  position: absolute;
  top: 50px;
  left: 0;
}

#transactionConfirmForm label {
  font-size: 12px;
}

#transactionConfirmForm input::-webkit-input-placeholder,
#transactionConfirmForm textarea::-webkit-input-placeholder {
  font-size: 12px;
}

.confirmOrderHolder,
.contractHolder,
.feedbackHolder {
  transition: bottom .15s ease;
  bottom: -250px;
  position: absolute;
}

#modalHolder {
  position: fixed;
  z-index: 9;
  -webkit-app-region: no-drag;
}

#messageModal {
  z-index: 9;
}

#loadingModal, .page-connect-modal.server-connect {
  z-index: 14;
}

#ov1 #loadingModal.hide {
  height: 0; /* kludge to allow top bar to fade in. Transitions don't work if display is none */
  padding: 0;
  overflow: hidden;
  display: block;
}

#loadingModal #loadingModalTopBar {
  position: absolute;
  top: 0px;
  width: 100%;
  transition: top 1s;
  transition-delay: 5s;
  padding: 9px;
}

#loadingModal.hide #loadingModalTopBar {
  top: -50px;
}

#ov1 .server-connect-modal {
  z-index: 15;
}

#ov1 .server-connect-modal .modal-child {
  height: 625px;
  overflow: hidden;
}

#ov1 .server-connect-modal .message-bar {
  top: 50px;
  left: 25px;
  right: 25px;
  z-index: 1;
  transition: top .2s, opacity .2s;
}

#ov1 .server-connect-modal .message-bar > div {
  background-color: #C62D2D;
  padding: 8px 20px;
  line-height: 2.2;
  display: inline-block;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

#ov1 .server-connect-modal .message-bar .message-bar-close {
  top: -12px;
  right: -3px;
}

#ov1 .server-connect-modal .message-bar.slide-out {
  top: -45px;
  opacity: 0;
}

#ov1 .server-config-form:not(.no-transition) {
  transition: top 250ms;
}

#ov1 .server-config-form.slide-out {
  top: 372px;
}

#ov1 .server-config-row .connection-failed::after {
  content: '';
  position: absolute;
  width: 6px;
  background-color: #C62D2D;
  top: 0;
  left: 0;
  bottom: 0;
}

#loadingModal .btn {
  -webkit-app-region: no-drag;
}

.pill {
  border-radius: 2px;
  padding: 5px 7px;
  min-width: 100px;
  background: red;
}

.selectPill {
  opacity: .75;
  transition: opacity .2s cubic-bezier(0, 0, 0.2, 1);
  width: 156px;
  text-align: right;
}

.selectPill select {
  background-color: #327EB8;
  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
  border-radius: 3px;
  color: #fff;
  cursor: pointer;
  font-size: 12px;
  margin-left: 10px;
  letter-spacing: .4px;
  padding: 6px;
  width: 148px;
  z-index: 2;
  -webkit-user-select: none;
  outline: none;
}

.selectPill:before {
  content: "\f104";
  font-family: Ionicons;
  position: absolute;
  line-height: 31px;
  opacity: .5;
  top: 0;
  right: 6px;
  pointer-events: none;
}

.selectPill:hover {
  opacity: 1;
}

.selectPillWrapper {

}

.violatorTR {
  /* sets triangle to be in the top right corner */
  /* must be given equal height and width properties */
  /* text or icons inside the violator should have positionTopRight and a right and top margin or padding based on the violator size */
  position: absolute;
  top: 0;
  right: 0;
  -webkit-clip-path: polygon(50% 0, 100% 0, 100% 50%);
  z-index: 1; /* this shouldn't need to be higher. Make it the last element in its container */
  text-align: center;
}

.violator1 {
  width: 50px;
  height: 50px;
  background: #215175; /* this should be overridden with a color class */
  color: #fff;
}

.violatorTxt{
  /* use on content of a violator to rotate it to match the violator */
  display: block;
  transform: rotate(45deg);
}

.listingTypeDigital:before {
  color: #EFEF4C;
  content: "\f137";
  font-family: Ionicons;
  font-size: 12px;
}

.listingTypePhysical:before {
  color: #805C17;
  content: "\f318";
  font-family: Ionicons;
  font-size: 12px;
}

.listingTypeService:before {
  color: #DEDEDE;
  content: "\f2ad";
  font-family: Ionicons;
  font-size: 12px;
}

  /* protect customize controls from custom page styles */
#ov1 #customizeControls .labelWrap {
  height: 40px;
  border-radius: 0;
}

#ov1 #customizeControls .labelWrap input {
  color: rgba(255,255,255,0.6);
}

.colpick {
  z-index: 10;
  border-radius: 0;
  background: #252525;
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
}

.colpick-customizeColor {
  left: 70px !important; /* I want to override the inline styles on the colpick element */
}

#ov1 .colpick input {
  color: #616161;
}

.colpick_rgbhex .colpick_new_color,
.colpick_rgbhex .colpick_current_color {
  height: 20px;
}

.colpick_rgbhex .colpick_rgb_r {
  top: 33px;
}

.colpick_rgbhex .colpick_rgb_g {
  top: 60px;
}

.colpick_rgbhex .colpick_rgb_b {
  top: 87px;
}

.colpick_rgbhex .colpick_hex_field {
  top: 114px;
}

.colpick_dark .colpick_submit {
  top: 142px;
  color: #B5B5B5;
  font-weight: 400;
  border-color: #616161;
}

#ov1 .medium-editor-toolbar {
  background: #353443;
}

#ov1::-webkit-scrollbar {
  display: none;
  box-sizing: border-box;
}

.qrCode {
  background-color: #fff;
  padding: 15px;
}

.buyView .chosen-container .chosen-results {
  max-height: 180px;
}

#obContainer {
  height: calc(100% - 50px);
  overflow-y: scroll;
  padding-top: 20px;
  -webkit-app-region: no-drag;
  position: relative;
  top: 50px;
  box-sizing: border-box;
}

.chatConversationMessageLine .chatConversationMessageBody a {
  text-decoration: underline;
}

#statusBar {
  position: fixed;
  bottom: 0;
  z-index: 10;
  width: 100%;
}

#statusBar .statusMessageWrap {
  height: 0px;
  overflow: hidden;
  transition: opacity 1.5s, height 1s;
}
/* ... */

